--- a/python.org
+++ b/python.org
@@ -35,6 +35,7 @@ Output: [0,1]
   - ~-109 <= target <= 109~
   - *Only one valid answer exists.*
 
+*Solution:*
 #+begin_src python :output result
 from typing import List
 
@@ -64,6 +65,7 @@ Output: 7 -> 0 -> 8
 Explanation: 342 + 465 = 807.
 #+end_src
 
+*Solution:*
 #+begin_src python
 class ListNode:
     def __init__(self, val=0, next=None):
@@ -136,6 +138,7 @@ Output: true
   - ~1 <= s.length <= 104~
   - ~s~ consists of parentheses only ~'()[]{}'~.
 
+*Solution:*
 #+begin_src python
 class Solution:
     def isValid(self, s: str) -> bool:
@@ -155,4 +158,65 @@ class Solution:
                 if ps[stack.pop()] != c:
                     return False
         return len(stack) == 0
+#+end_src
+
+** [[https://leetcode.com/problems/remove-duplicates-from-sorted-array][26. Remove Duplicates from Sorted Array]]
+
+Given a sorted array /nums/, remove the duplicates *in-place* such that each element appear only /once/ and return the new length.
+
+Do not allocate extra space for another array, you must do this by *modifying the input array in-place* with O(1) extra memory.
+
+*Example 1:*
+#+begin_src 
+Given /nums/ = *[1,1,2]*,
+
+Your function should return length = *2*, with the first two elements of /nums/ being *1* and *2* respectively.
+
+It doesn't matter what you leave beyond the returned length.
+#+end_src
+
+*Example 2:*
+#+begin_src
+Given /nums/ = *[0,0,1,1,1,2,2,3,3,4]*,
+
+Your function should return length = *5*, with the first five elements of /nums/ being modified to *0*, *1*, *2*, *3*, and *4* respectively.
+
+It doesn't matter what values are set beyond the returned length.
+#+end_src
+
+*Clarification:*
+
+Confused why the returned value is an integer but your answer is an array?
+
+Note that the input array is passed in by *reference*, which means modification to the input array will be known to the caller as well.
+
+Internally you can think of this:
+
+#+begin_src c
+// nums is passed in by reference. (i.e., without making a copy)
+int len = removeDuplicates(nums);
+
+// any modification to nums in your function would be known by the caller.
+// using the length returned by your function, it prints the first len elements.
+for (int i = 0; i < len; i++) {
+    print(nums[i]);
+}
+#+end_src
+
+*Solution:*
+#+begin_src python
+from typing import List
+
+class Solution:
+    def removeDuplicates(self, nums: List[int]) -> int:
+        i, j = 0, 1
+        n = len(nums)
+        while j < n:
+            if nums[i] != nums[j]:
+                i += 1
+                nums[i] = nums[j]
+            else:
+                j += 1
+
+        return i + 1
 #+end_src
